src/styles/lx-buttons.css
/* ... */
.lx-layout>.lx-skip-link-wrapper {
    z-index: 9999;
}

.lx-skip-link-wrapper {
  position: relative;
  z-index: 8099;
  width: 0px;
  height: 0px;
}

.lx .lx-skip-link-wrapper .lx-button {
  opacity: 0;
  width: 0px;
  height: 0px;
  position: absolute;
}

.lx .lx-layout>.lx-skip-link-wrapper .lx-button {
  border: none;
}

.lx .lx-skip-link-wrapper .lx-button div {
  overflow: hidden;
}

.lx .lx-skip-link-wrapper .lx-button:focus {
  opacity: 1;
  width: var(--button-primary-width);
  height: var(--button-primary-height);
}

.lx .lx-skip-link-wrapper .lx-button:focus div {
  overflow: visible;
}

/* LxDropDownMenu action definitions */

.popper > .lx-dropdown-panel-wrapper:focus-visible {
  outline: none;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group {
  border-bottom: 1px solid var(--color-chrome)
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group > .lx-label {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group:first-of-type > .lx-label {
  margin-top: 0.25rem;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group.lx-dropdown-menu-no-panel:last-child {
  border-bottom: none;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group .lx-dropdown-menu-toggle-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem 0.5rem 0.5rem 1rem;
  cursor: pointer;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group .lx-dropdown-menu-toggle-wrapper > .lx-dropdown-toggle-label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-right: 0.5rem;
  color: var(--color-data);
  cursor: pointer;
}

.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group .lx-dropdown-menu-toggle-wrapper:has(.lx-toggle[disabled]) > .lx-dropdown-toggle-label,
.popper > .lx-dropdown-panel-wrapper > .lx-dropdown-panel > .lx-dropdown-menu-group .lx-dropdown-menu-toggle-wrapper:has(.lx-toggle[disabled]) {
  cursor: not-allowed;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag-set {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 1rem 0;
  gap: 0.5rem;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-group:only-child .lx-dropdown-menu-tag-wrapper .lx-tag-set {
  margin: 0;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-group .lx-label + .lx-dropdown-menu-tag-wrapper .lx-tag-set,
.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-group:first-of-type .lx-dropdown-menu-tag-wrapper:first-child .lx-tag-set {
  margin-top: 0;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-group:last-of-type .lx-dropdown-menu-tag-wrapper:last-child .lx-tag-set {
  margin-bottom: 0;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag {
  height: 4rem;
  justify-content: start;
  padding: 0.5rem;
  gap: 0.5rem;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag:not(:has(svg)) {
  align-items: start;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-dropdown-menu-tag-content-wrapper {
  display: grid;
  row-gap: 0.25rem;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag .lx-dropdown-menu-tag-label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  line-height: 1.2em;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-dropdown-menu-tag-content-wrapper:not(:has(svg)) .lx-dropdown-menu-tag-label {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  white-space: normal;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag svg {
  height: 1.5rem;
  width: 1.5rem;
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag[disabled="false"]:hover svg {
  fill: var(--color-region-hover-foreground);
}

.lx-dropdown-panel-wrapper > .lx-dropdown-panel .lx-dropdown-menu-tag-wrapper .lx-tag.lx-tags-tile-selected[disabled="false"] svg {
  fill: var(--color-selected);
}

@media (max-width: 1900px) {
  .lx-layout-default.lx-collapsed .lx-nav-panel {
    width: var(--row-size);
  }

  .lx-layout-default.lx-collapsed .lx-nav-panel .lx-button label {
    display: none;
  }

  .lx-layout-default.lx-collapsed .lx-nav-panel .lx-dropdown-panel .lx-button label {
    display: inherit;
  }
}

@media (min-width: 801px) and (max-width: 1900px) {
  .lx-layout-default.lx-collapsed .lx-nav-panel:hover,
  .lx-layout-default.lx-collapsed .lx-nav-panel:has(.lx-button:focus-visible) {
    width: var(--aside-size);
    box-shadow: var(--shadow-dropdown);
  }

  .lx-layout-default.lx-collapsed .lx-nav-panel:hover .lx-button label {
    display: inherit;
  }
}

@media (max-width: 900px) {
  .lx-layout-public .lx-nav-panel ul li .lx-button,
  .lx-layout-latvijalv .lx-nav-panel ul li .lx-button {
    height: var(--row-size);
  }

  .lx .lx-layout-public .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper,
  .lx .lx-layout-public .lx-nav-panel ul .lx-toolbar > .lx-button .lx-button-content-wrapper,
  .lx .lx-layout-latvijalv .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper,
  .lx .lx-layout-latvijalv .lx-nav-panel ul .lx-toolbar > .lx-button .lx-button-content-wrapper,
  .lx .lx-layout-public .lx-nav-panel ul .lx-spotlight-button .lx-button .lx-button-content-wrapper ,
  .lx .lx-layout-latvijalv .lx-nav-panel ul .lx-spotlight-button .lx-button .lx-button-content-wrapper {
    --button-nav-public-grid-areas: 'icon content';
    --button-nav-public-grid-template-columns: auto 1fr;
    --button-nav-public-text-align: left;
  }
}
/* ... */

